--- a/task8/index.html
+++ b/task8/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task05 - Phan Tuấn Khanh</title>
+    <title>Task06 - Phan Tuấn Khanh</title>
     <style>
         * {
             margin: 0;
@@ -315,22 +315,25 @@
     <div class="container">
         <div class="header">
             <div class="header-icon">⚡</div>
-            <h1>BTVN JS - PHAN TUẤN KHANH</h1>
-            <p>Kết quả bài tập sẽ hiển thị ở đây khi JS có kết quả</p>
+            <h1>Task08 - PHAN TUẤN KHANH</h1>
         </div>
 
         <div class="nav-tabs">
-            <a href="./task5/index.html" >TASK 5</a>
-            <a href="./task6/index.html" >TASK 6</a>
-            <a href="./task7/index.html" >TASK 7</a>
-            <a href="./task8/index.html" >TASK 8</a>
-        
+            <a href="./bai1.html" >Bài 1</a>
+            <a  href="./bai2.html" >Bài 2</a>
+            <a  href="./bai3.html" >Bài 3</a>
         </div>
 
-       
+        <div class="progress-section">
+            <h3 class="progress-title">Tiến độ hoàn thành</h3>
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+            </div>
+            <p class="progress-text">Đã hoàn thành 100% các bài tập</p>
+        </div>
 
         <div class="footer">
-            <p class="footer-text">© 2025 Task - Phan Tuấn Khanh | CodeFarm</p>
+            <p class="footer-text">© 2025 Task08 - Phan Tuấn Khanh | CodeFarm</p>
             <div class="social-links">
                 <a href="#" class="social-link">📧</a>
                 <a href="#" class="social-link">🌐</a>
