--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
             <a href="./task9/index.html" >TASK 9</a>
             <a href="./task10/index.html" >TASK 10</a>
             <a href="./task11/index.html" >TASK 11</a>
+            <a href="./task13/index.html" >TASK 13</a>
         
         </div>
 
